modif html + fetch api

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <div class="container">
 
-        <h1>Application méteo</h1>
-        <div class="bloc-logo-info">
+        <h1 class="title">Application méteo</h1>
+        <div class="bloc bloc-logo-info">
             <div class="bloc-logo">
                 <img src="./ressources/jour/04d.svg" alt="logo de la météo" class="logo-meteo">
             </div>
             <div class="bloc-info">
                 <p class="temps">Soleil</p>
                 <p class="temperature">30C°</p>
-                <p class="localisation">Marseille</p>
+                <p class="localisation"></p>
             </div>
         </div>
 
@@ -45,7 +45,7 @@
                 <p class="heure-prevision-valeur"></p>
             </div>
             <div class="bloc-h">
-                <p class="heure-nom-prevision">heure</p>
+                <p class="heure-nom-prevision"></p>
                 <p class="heure-prevision-valeur"></p>
             </div>
             <div class="bloc-h">
