--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <div class="container">
 
-        <h1 class="title">Application méteo</h1>
-        <div class="bloc bloc-logo-info">
-            <div class="bloc-logo">
+        <h1 class="container__title">Votre météo en direct</h1>
+        <div class="bloc">
+            <div class="bloc__logo">
                 <img src="./ressources/jour/04d.svg" alt="logo de la météo" class="logo-meteo">
             </div>
-            <div class="bloc-info">
-                <p class="temps">Soleil</p>
-                <p class="temperature">30C°</p>
+            <div class="bloc__info">
+                <p class="temps"></p>
+                <p class="temperature"></p>
                 <p class="localisation"></p>
             </div>
         </div>
@@ -87,7 +87,7 @@
     </div>
 
 
-    <script type="module" src="scripts/main.js"></script>
+    <script defer type="module" src="scripts/main.js"></script>
 </body>
 
 </html>
