--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 
 <body>
     <div class="container">
-
+        <!-- Loader
+        <div class="loader">
+            <img src="ressources/chargement/circles.svg" alt="logo chargement">
+        </div>
+         -->
         <h1 class="container__title">Votre météo en direct</h1>
         <div class="bloc">
             <div class="bloc__logo">
                 <img src="./ressources/jour/04d.svg" alt="logo de la météo" class="logo-meteo">
             </div>
             <div class="bloc__info">
-                <p class="temps"></p>
                 <p class="temperature"></p>
+                <p class="temps"></p>
                 <p class="localisation"></p>
             </div>
         </div>
@@ -86,7 +90,7 @@
         </div>
     </div>
 
-
+    <script type="module" src="scripts/Utilitaire/gestionTemps.js"></script>
     <script defer type="module" src="scripts/main.js"></script>
 </body>
 
