--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="ressources/chargement/circles.svg" alt="logo chargement">
         </div>
          -->
-        <h1 class="container__title">Votre météo en direct</h1>
+        <h1 class="container__title">Prévision météo</h1>
         <div class="bloc">
             <div class="bloc__logo">
                 <img src="./ressources/jour/04d.svg" alt="logo de la météo" class="logo-meteo">
