modif icon onglet

--- a/index.html
+++ b/index.html
@@ -4,21 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AppMétéo</title>
+    <title>Votre météo</title>
+    <link rel="icon" href="./application-meteo.svg" class="rel">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <!-- Loader
-        <div class="loader">
-            <img src="ressources/chargement/circles.svg" alt="logo chargement">
-        </div>
-         -->
         <h1 class="container__title">Prévision météo</h1>
         <div class="bloc">
             <div class="bloc__logo">
-                <img src="./ressources/jour/04d.svg" alt="logo de la météo" class="logo-meteo">
+                <img src="./ressources/jour/04d.svg" alt="logo météo" class="bloc__img">
             </div>
             <div class="bloc__info">
                 <p class="temperature"></p>
